--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,15 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" // Required for Kotlin integration
         classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version" // See https://kotlinlang.org/docs/reference/compiler-plugins.html#kotlin-spring-compiler-plugin
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$spring_boot_version"
+
     }
 }
 
 apply plugin: 'kotlin' // Required for Kotlin integration
 apply plugin: "kotlin-spring" // See https://kotlinlang.org/docs/reference/compiler-plugins.html#kotlin-spring-compiler-plugin
 apply plugin: 'org.springframework.boot'
+
+apply from: "$rootDir/gradle/io-platform.gradle"
 
 jar {
     baseName = 'vesta'
@@ -27,5 +30,11 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version" // Required for Kotlin integration
     compile 'org.springframework.boot:spring-boot-starter-web'
+    compile "org.springframework.data:spring-data-jpa"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    compile "org.hibernate:hibernate-core"
+    compile "org.hibernate:hibernate-entitymanager"
+    compile "org.postgresql:postgresql"
+    compile "org.liquibase:liquibase-core"
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
