--- a/build.gradle
+++ b/build.gradle
@@ -37,5 +37,12 @@ dependencies {
     compile "org.postgresql:postgresql"
     compile "org.liquibase:liquibase-core"
     testCompile 'org.springframework.boot:spring-boot-starter-test'
-    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+    testCompile "org.spockframework:spock-core:${spockVersion}"
+    testCompile( "org.spockframework:spock-spring:${spockVersion}" ) {
+        exclude module: 'groovy-all'
+    }
+    testCompile( "org.spockframework:spock-core:${spockVersion}" )  {
+        exclude module: 'groovy-all'
+    }
+
 }
